tests/errors/error_negative_index.nimmy
# Error: Negative array index
let arr = [1, 2, 3]
echo arr[-1]